# PowerShell-Native

./: .gitignore  .gitmodules  Dockerfile  LICENSE.txt  README.md  azurepipelines-coverage.yml  build.psm1  es-metadata.yml  owners.txt
.config/: tsaoptions.json
.github/: CONTRIBUTING.md
.pipelines/: release.yml
.vsts-ci/: linux.yml  (+3 more)
src/libpsl-native/: CMakeLists.txt  alpine.arm.toolchain.cmake  alpine.arm64.toolchain.cmake  arm.toolchain.cmake  arm64.toolchain.cmake  gmock.pc  gmock_main.pc  gtest.pc  gtest_main.pc  macos.toolchain.cmake
src/libpsl-native/src/: CMakeLists.txt  createhardlink.cpp  createhardlink.h  createprocess.cpp  createprocess.h  createsymlink.cpp  createsymlink.h  followsymlink.cpp  followsymlink.h  getcommonlstat.cpp  getcommonlstat.h  getcommonstat.cpp  getcommonstat.h  getcomputername.cpp  getcomputername.h  getcurrentprocessorid.cpp  getcurrentprocessorid.h  getcurrentthreadid.cpp  getcurrentthreadid.h  geterrorcategory.cpp  geterrorcategory.h  getfileowner.cpp  getfileowner.h  getgrgid.cpp  getgrgid.h  getinodedata.cpp  getinodedata.h  getlinkcount.cpp  getlinkcount.h  getlstat.cpp  getlstat.h  getppid.cpp  getppid.h  getpwuid.cpp  getpwuid.h  getstat.cpp  getstat.h  getuserfrompid.cpp  getuserfrompid.h  isdirectory.cpp  (+19 more)
src/libpsl-native/test/: CMakeLists.txt  main.cpp  test-createhardlink.cpp  test-createsymlink.cpp  test-getcommonlstat.cpp  test-getcommonstat.cpp  test-getcomputername.cpp  test-getcurrentprocessid.cpp  test-getcurrentthreadid.cpp  test-getfileowner.cpp  test-getgrgid.cpp  test-getlinkcount.cpp  test-getpwuid.cpp  test-getuserfrompid.cpp  test-isdirectory.cpp  test-isexecutable.cpp  test-isfile.cpp  test-issymlink.cpp  test-locale.cpp
(+61 files in other folders)
